--- a/google-book-search/package.json
+++ b/google-book-search/package.json
@@ -4,12 +4,14 @@
   "description": "MERN - React application",
   "main": "server.js",
   "dependencies": {
+    "axios": "^0.18.0",
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
     "mongoose": "^5.5.5",
     "nodemon": "^1.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "^3.0.0"
   },
   "devDependencies": {},
