add node version and yarn to package.json

--- a/google-book-search/package.json
+++ b/google-book-search/package.json
@@ -4,7 +4,8 @@
   "description": "MERN - React application",
   "main": "server.js",
   "engines": {
-    "node": "8.11.3"
+    "node": "10.13.0",
+    "yarn": "1.12.3"
   },
   "dependencies": {
     "axios": "^0.18.0",
