--- a/google-book-search/package.json
+++ b/google-book-search/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
+    "if-env": "^1.0.4",
     "mongoose": "^5.5.5",
     "nodemon": "^1.19.0",
     "react": "^16.8.6",
