--- a/google-book-search/package.json
+++ b/google-book-search/package.json
@@ -24,9 +24,9 @@
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-    "client": "cd client && npm run start",
-    "install": "cd client && npm install",
-    "build": "cd client && npm run build",
+    "client": "cd ./google-book-search/client && npm run start",
+    "install": "cd ./google-book-search/client && npm install",
+    "build": "cd ./google-book-search/client && npm run build",
     "heroku-postbuild": "npm run build"
   },
   "keywords": [
