--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
     "description": "Mern Demo",
     "main": "server.js",
     "engines": {
-        "node": "10.13.0",
-        "yarn": "1.12.3"
+        "node": "10.13.0"
     },
     "scripts": {
-        "start": "if-env NODE_ENV=production && yarn run start:prod || yarn run start:dev",
+        "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
         "start:prod": "node server.js",
-        "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"yarn run client\"",
-        "client": "cd client && yarn run start",
-        "install": "cd client && yarn install",
-        "build": "cd client && yarn run build",
-        "heroku-postbuild": "yarn run build"
+        "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+        "client": "cd client && npm run start",
+        "install": "cd client && npm install",
+        "build": "cd client && npm run build",
+        "heroku-postbuild": "npm run build"
     },
     "author": "",
     "license": "ISC",
