--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "license": "ISC",
     "devDependencies": {
         "concurrently": "^4.1.0",
-        "nodemon": "^1.18.7"
+        "nodemon": "^1.18.7",
+        "react-router-dom": "^5.0.0"
     },
     "dependencies": {
         "axios": "^0.18.0",
