--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "license": "ISC",
     "devDependencies": {
         "concurrently": "^4.1.0",
-        "nodemon": "^1.18.7",
-        "react-router-dom": "^5.0.0"
+        "nodemon": "^1.18.7"
     },
     "dependencies": {
         "axios": "^0.18.0",
@@ -28,6 +27,7 @@
         "express": "^4.16.3",
         "if-env": "^1.0.4",
         "mongodb": "^3.1.11",
-        "mongoose": "^5.4.4"
+        "mongoose": "^5.4.4", 
+        "react-router-dom": "^5.0.0"
     }
 }
